--- a/eds_day3_afternoon_vectors.Rmd
+++ b/eds_day3_afternoon_vectors.Rmd
@@ -39,6 +39,19 @@ bananas - apples
 bananas %*% apples #gives you the dot product
 ```
 
+#matrices
+
+```{r}
+my_values <- seq(from = 1, to = 10)
+
+my_matrix <- matrix(data = my_values, nrow = 2, ncol = 5, byrow = TRUE)
+my_matrix
+
+5 * my_matrix
+```
+```{r}
+glimpse(penguins)
+```
 
 
 
